--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:label="@string/title_activity_testimonials"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ContactUS"
+            android:name=".SQlite.ContactUS"
             android:label="@string/title_activity_contact_us"
             android:theme="@style/AppTheme.NoActionBar" />
 
