--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -18,19 +18,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.techjany.abc.Navigation"
+            android:name=".Navigation"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.techjany.abc.Gallery"
+            android:name=".Gallery"
             android:label="@string/title_activity_gallery"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.techjany.abc.Retrofit.activity.RetrofitPractice"
+            android:name=".Retrofit.activity.RetrofitPractice"
             android:label="@string/title_activity_retrofit_practice"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.techjany.abc.SQlite.ClientsInfo"
+            android:name=".SQlite.ClientsInfo"
             android:label="@string/title_activity_contact_us"
             android:theme="@style/AppTheme.NoActionBar" />
 
@@ -39,9 +39,9 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="com.techjany.abc.Locations"
+            android:name=".Locations"
             android:label="@string/title_activity_locations" />
-        <activity android:name="com.techjany.abc.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
